feat: enable post update and deletion
